--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 .backgroundImg {
     background: url("img/backgroundPhone.png") center center/cover no-repeat;
+    position:absolute;
+    z-index: -1;
+    top:0;
+    left:0;
+    min-width:100%;
+    min-height:100%;
 }
