--- a/src/containers/media.css
+++ b/src/containers/media.css
@@ -1,7 +1,9 @@
 @media screen and (max-width: 1200px){
-    .wrapInfo {
-        flex-direction: column;
-        align-items: center;
+    .img {
+        width: 300px;
+    }
+    .img img{
+        width: 100%;
     }
 }
 
@@ -14,11 +16,15 @@
     .genreWrap {
         display: none;
     }
+    .genreWrapMobile {
+        top: 10px;
+    }
     .wrapMenu {
         width: 100px;
         height: 100px;
         position: absolute;
-        left: 20px;
+        left: -35px;
+        top: -105px;
     }
     .wrapMenu_line {
         height: 10px;
@@ -42,6 +48,12 @@
 }
 
 @media screen and (max-width: 768px){
+    .descrWrap {
+        width: 300px;
+    }
+   .descrWrap .descr {
+        font-size: 15px;
+    }
    .headerWrap {
        flex-direction: column;
        align-items: center;
@@ -49,47 +61,46 @@
     .loginWrap .login {
         margin: auto;
     }
-    .img {
-        width: 30%;
-    }
-    .img img {
-        width: 100%;
-    }
-   .descrWrap .title {
-       font-size: 20px;
-   }
-   .descrWrap .descr {
-       font-size: 15px;
-   }
-   .imgTitle {
-       width: 50%;
-   }
-   .imgTitle img {
-       width: 100%;
-   }
-   .listWrap {
-       border: none;
-   }
+
 }
 @media screen and (max-width: 576px){
-    .listWrap {
-        align-items: flex-end;
+    .changePage {
+      display: block;
+        margin: 10px auto;
     }
-    .wrapGenres{
-        padding: 8px;
+    .genreWrapMobile {
+        width: 300px;
     }
-    .listWrap .title {
-        width: 100px;
-        font-size: 15px;
+    .wrapImg {
+        margin: auto;
     }
-    .wrapBtn {
-        width: 200px;
+    .container div {
+        text-align: center;
     }
+    .rating {
+        justify-content: center;
+    }
+    .wrapMenu {
+        top:-100px;
+        left: 50px;
+    }
+    .wrapInfo {
+        flex-direction: column;
+    }
+
 
 }
 @media screen and (max-width: 320px){
-    .backgroundImg .headerWrap {
-        padding:  0;
+    .headerWrap, .wrapInfo {
+        padding: 0;
     }
-
+    .wrapMenu {
+        left: 20px;
+    }
+    .msgNoAcaunt {
+        width: 200px;
+    }
+    form {
+        padding: 50px 0;
+    }
 }
